fix #5265 ~ composer handle overflow (#5273)

--- a/src/sass/components/composer/composer.scss
+++ b/src/sass/components/composer/composer.scss
@@ -115,6 +115,11 @@
           flex-direction: column;
         }
 
+        .angular-squire-wrapper {
+            overflow: auto;
+            -webkit-overflow-scrolling: touch;
+        }
+
         .composeEditor{
             position: relative; /* dropzone parent which is absolute */
         }
